2007-06-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Dave Hyatt.
        
        Fixed <rdar://problem/4977124> | http://bugs.webkit.org/show_bug.cgi?id=12646
        REGRESSION: RapidWeaver's "Hello" HTML page doesn't display any DHTML 
        effects when clicking on its links (12646)
        
        Added layout test for this bug:

        * fast/invalid/nestedh3s-rapidweaver-expected.txt: Added.
        * fast/invalid/nestedh3s-rapidweaver.html: Added.

        Reversed the expected results for this test because I rolled out r7703:

        * fast/invalid/nestedh3s-expected.checksum:
        * fast/invalid/nestedh3s-expected.png:
        * fast/invalid/nestedh3s-expected.txt:
        * fast/invalid/nestedh3s.html:

2007-06-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.
        
        Update test results.

        * http/tests/loading/bad-scheme-subframe-expected.txt:
        * http/tests/loading/bad-server-subframe-expected.txt:
        * http/tests/loading/basic-expected.txt:
        * http/tests/loading/empty-subframe-expected.txt:
        * http/tests/loading/simple-subframe-expected.txt:
        * webarchive/loading/test-loading-archive-expected.txt:

2007-06-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        Update test result.
        
        * fast/dom/xmlhttprequest-invalid-values-expected.txt:

2007-06-21  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Anders.

        http://bugs.webkit.org/show_bug.cgi?id=13905
        REGRESSION: A Chinese dictionary widget has a problem with XMLHttpRequest response encoding

        * http/tests/xmlhttprequest/resources/1251.html: Added.
        * http/tests/xmlhttprequest/response-encoding-expected.txt:
        * http/tests/xmlhttprequest/response-encoding.html:

2007-06-21  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Anders.

        One more test for XHR header injection.
